# stardew-host-swap

./: README.md  pyproject.toml
stardjango/: manage.py
stardjango/stardjango/: settings.py  urls.py  utils.py  views.py  wsgi.py
stardjango/stardjango/templates/: editor.html
