[tool.poetry]
name = "stardew-host-swap"
version = "0.1.0"
description = ""
authors = ["Arthur NA <arthurnalves.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
